<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black">

    <TextView
        android:id="@+id/authentication_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/onstyle_activation_tips_title"
        android:textColor="@color/color_white"
        android:textSize="@dimen/onstyle_authentication_title_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/authentication_activation_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_42dp"
        android:layout_marginRight="@dimen/margin_66dp"
        android:background="@drawable/authentication_activition_later_bg"
        android:paddingHorizontal="@dimen/padding_20dp"
        android:paddingVertical="@dimen/padding_15dp"
        android:text="@string/onstyle_activation_later"
        android:textColor="@color/color_white"
        android:textSize="@dimen/onstyle_authentication_text_size"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/authentication_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_45dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:text="@string/onstyle_activation_user_tips"
        android:textColor="@color/color_white"
        android:textSize="@dimen/onstyle_authentication_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authentication_title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/authentication_small_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onstyle_activation_small_tips"
        android:textColor="@color/color_activate_tips"
        android:textSize="@dimen/onstyle_authentication_tips_size"
        app:layout_constraintBottom_toBottomOf="@id/authentication_tips"
        app:layout_constraintLeft_toRightOf="@id/authentication_tips"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/authentication_activation_method1_layout"
        android:layout_width="@dimen/onstyle_activition_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_35dp"
        android:background="@drawable/authentication_activition_method_bg"
        app:layout_constraintLeft_toLeftOf="@id/authentication_tips"
        app:layout_constraintTop_toBottomOf="@id/authentication_tips"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/authentication_activation_method1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_23dp"
            android:text="@string/onstyle_activation_method1"
            android:textColor="@color/color_white"
            android:textSize="@dimen/onstyle_authentication_text_size_23sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_23dp"
            android:layout_marginBottom="@dimen/margin_25dp"
            android:text="@string/onstyle_activation_method1_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/onstyle_authentication_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authentication_activation_method1" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/authentication_activation_method2_layout"
        android:layout_width="@dimen/onstyle_activition_width"
        android:layout_height="219dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:background="@drawable/authentication_activition_method_bg"
        app:layout_constraintLeft_toLeftOf="@id/authentication_activation_method1_layout"
        app:layout_constraintTop_toBottomOf="@id/authentication_activation_method1_layout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/authentication_activation_method2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_23dp"
            android:text="@string/onstyle_activation_method2"
            android:textColor="@color/color_white"
            android:textSize="@dimen/onstyle_authentication_text_size_23sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/authentication_oushang_app_qrcode"
            android:layout_width="@dimen/onstyle_app_qrcode_width"
            android:layout_height="@dimen/onstyle_app_qrcode_height"
            android:layout_marginStart="@dimen/margin_41dp"
            android:layout_marginTop="@dimen/margin_22dp"
            android:layout_marginBottom="@dimen/margin_23dp"
            android:src="@drawable/onshang_app_qrcode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authentication_activation_method2" />

        <TextView
            android:id="@+id/authentication_oushang_qrcode_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_41dp"
            android:text="@string/onstyle_activation_method2_content1"
            android:textColor="@color/color_white"
            android:textSize="@dimen/onstyle_authentication_text_size"
            app:layout_constraintLeft_toRightOf="@id/authentication_oushang_app_qrcode"
            app:layout_constraintTop_toTopOf="@id/authentication_oushang_app_qrcode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/onstyle_activation_method2_content2"
            android:textColor="@color/color_white"
            android:textSize="@dimen/onstyle_authentication_text_size"
            app:layout_constraintLeft_toLeftOf="@id/authentication_oushang_qrcode_tips"
            app:layout_constraintTop_toBottomOf="@id/authentication_oushang_qrcode_tips" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/authentication_service_layout"
        android:layout_width="@dimen/onstyle_activition_width"
        android:layout_height="355dp"
        android:layout_marginLeft="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_35dp"
        android:background="@drawable/authentication_activation_service_bg"
        app:layout_constraintLeft_toRightOf="@id/authentication_activation_method1_layout"
        app:layout_constraintTop_toBottomOf="@id/authentication_tips"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/authentication_enjoy_following_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_39dp"
            android:text="@string/onstyle_activation_service_tips_title"
            android:textColor="@color/color_white"
            android:textSize="@dimen/onstyle_authentication_text_size_23sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--高德导航-->
        <LinearLayout
            android:id="@+id/authentication_online_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_106dp"
            android:layout_marginTop="@dimen/margin_54dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authentication_enjoy_following_service">

            <ImageView
                android:layout_width="@dimen/onstyle_service_icon_width"
                android:layout_height="@dimen/onstyle_service_icon_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_gaode_navigation" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_14dp"
                android:text="@string/onstyle_service_gaode_navigation"
                android:textColor="@color/color_white"
                android:textSize="@dimen/onstyle_authentication_text_size" />

        </LinearLayout>

        <!--小欧语音-->
        <LinearLayout
            android:id="@+id/authentication_kuwo_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_125dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/authentication_online_navigation"
            app:layout_constraintTop_toTopOf="@id/authentication_online_navigation">

            <ImageView
                android:layout_width="@dimen/onstyle_service_icon_width"
                android:layout_height="@dimen/onstyle_service_icon_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_xiaoou_voice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_14dp"
                android:text="@string/onstyle_service_xiaoou_voice"
                android:textColor="@color/color_white"
                android:textSize="@dimen/onstyle_authentication_text_size" />

        </LinearLayout>

        <!--空中升级-->
        <LinearLayout
            android:id="@+id/authentication_oushang_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_125dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/authentication_kuwo_music"
            app:layout_constraintTop_toTopOf="@id/authentication_online_navigation">

            <ImageView
                android:layout_width="@dimen/onstyle_service_icon_width"
                android:layout_height="@dimen/onstyle_service_icon_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_air_upgrade" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_14dp"
                android:text="@string/onstyle_service_air_upgrade"
                android:textColor="@color/color_white"
                android:textSize="@dimen/onstyle_authentication_text_size" />

        </LinearLayout>


        <!--远程控车-->
        <LinearLayout
            android:id="@+id/authentication_voice_assistant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_41dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/authentication_online_navigation"
            app:layout_constraintTop_toBottomOf="@id/authentication_online_navigation">

            <ImageView
                android:layout_width="@dimen/onstyle_service_icon_width"
                android:layout_height="@dimen/onstyle_service_icon_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_remote_control_vehicle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_14dp"
                android:text="@string/onstyle_service_remote_control_vehicle"
                android:textColor="@color/color_white"
                android:textSize="@dimen/onstyle_authentication_text_size" />

        </LinearLayout>


        <!--QQ音乐-->
        <LinearLayout
            android:id="@+id/authentication_remote_control_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_131dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/authentication_voice_assistant"
            app:layout_constraintTop_toTopOf="@id/authentication_voice_assistant">

            <ImageView
                android:layout_width="@dimen/onstyle_service_icon_width"
                android:layout_height="@dimen/onstyle_service_icon_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_qq_music" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_14dp"
                android:text="@string/onstyle_service_qq_music"
                android:textColor="@color/color_white"
                android:textSize="@dimen/onstyle_authentication_text_size" />

        </LinearLayout>


        <!--在线电台-->
        <LinearLayout
            android:id="@+id/authentication_remote_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_131dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/authentication_remote_control_vehicle"
            app:layout_constraintTop_toTopOf="@id/authentication_remote_control_vehicle">

            <ImageView
                android:layout_width="@dimen/onstyle_service_icon_width"
                android:layout_height="@dimen/onstyle_service_icon_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_online_radio" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_14dp"
                android:text="@string/onstyle_service_online_radio"
                android:textColor="@color/color_white"
                android:textSize="@dimen/onstyle_authentication_text_size" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/onestyle_wx_qrcode_close"
        android:layout_width="@dimen/margin_45dp"
        android:layout_height="@dimen/margin_45dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginLeft="@dimen/margin_15dp"
        android:background="@drawable/ic_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/onestyle_wx_qrcode"
        android:layout_width="@dimen/onesyle_wx_qrcode_width"
        android:layout_height="@dimen/onesyle_wx_qrcode_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_110dp"
        android:src="@drawable/onstyle_wx_qrcode"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/onestyle_wx_qrcode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/onestyle_wx_qrcode"
        app:layout_constraintLeft_toLeftOf="@id/onestyle_wx_qrcode"
        app:layout_constraintRight_toRightOf="@id/onestyle_wx_qrcode"
        android:layout_marginTop="@dimen/margin_30dp"
        tools:ignore="MissingConstraints"
        android:textColor="@color/color_white"
        android:textSize="@dimen/onstyle_authentication_text_size_23sp"
        android:text="@string/onstyle_qrcode_title"/>

    <TextView
        android:id="@+id/onestyle_wx_qrcode_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/onestyle_wx_qrcode_title"
        app:layout_constraintLeft_toLeftOf="@id/onestyle_wx_qrcode_title"
        app:layout_constraintRight_toRightOf="@id/onestyle_wx_qrcode_title"
        android:layout_marginTop="@dimen/margin_23dp"
        tools:ignore="MissingConstraints"
        android:textSize="@dimen/onstyle_authentication_text_size_20sp"
        android:textColor="@color/color_qrcode_tips"
        android:text="@string/onstyle_qrcode_tips"/>


    <androidx.constraintlayout.widget.Group
        android:id="@+id/authentication_start_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="authentication_title,
        authentication_activation_later,
        authentication_tips,
        authentication_small_tips,
        authentication_activation_method1_layout,
        authentication_activation_method2_layout,
        authentication_service_layout"
        android:visibility="visible"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/onestyle_wx_qrcode_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="onestyle_wx_qrcode_close,
        onestyle_wx_qrcode,
        onestyle_wx_qrcode_title,
        onestyle_wx_qrcode_tips"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>